# acnh

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: availability.rs  bug.rs  catch_translations.rs  client.rs  fish.rs  fossil.rs  lib.rs  name.rs  sea_creature.rs  villager.rs
